--- a/11_06_2024_a.md
+++ b/11_06_2024_a.md
@@ -5,7 +5,7 @@ There is a command execution vulnerability in Ruijie RG-UAC. Attackers exploit v
 official：https://www.ruijie.com.cn
 
 
-version:full version
+version:1.0
 
 /view/systemConfig/reboot/reboot_commit.php
 The key code is marked, the variable $rebootmode is not equal to 1, and $servicename is controllable, directly substituted into exec, resulting in rce vulnerability.
