--- a/11_06_2024_b.md
+++ b/11_06_2024_b.md
@@ -4,7 +4,7 @@ There is a command execution vulnerability in Ruijie RG-UAC. Attackers exploit v
 
 official：https://www.ruijie.com.cn
 
-version:full version
+version:1.0
 
 url:/view/dhcp/dhcpConfig/commit.php
 
