--- a/20_09_2024_a.md
+++ b/20_09_2024_a.md
@@ -1,4 +1,4 @@
-# CodeZips Internal Marks Calculation In PHP With Source Code 1.0 index.php SQL injection
+# Codezips Internal Marks Calculation In PHP With Source Code 1.0 index.php SQL injection
 # NAME OF AFFECTED PRODUCT(S)
 + Internal Marks Calculation In PHP With Source Code
 ## Vendor Homepage
@@ -16,11 +16,11 @@
 ## Vulnerability Type
 + SQL injection
 ## Root Cause
-+ A SQL injection vulnerability was found in the 'index.php' file of the 'Internal Marks Calculation In PHP With Source Code' project. The reason for this issue is that attackers inject malicious code from the parameter "user" and use it directly in SQL queries without the need for appropriate cleaning or validation. This allows attackers to forge input values, thereby manipulating SQL queries and performing unauthorized operations.
++ A SQL injection vulnerability was found in the 'index.php' file of the 'Internal Marks Calculation In PHP With Source Code' project. The reason for this issue is that attackers inject malicious code from the parameter "tid" and use it directly in SQL queries without the need for appropriate cleaning or validation. This allows attackers to forge input values, thereby manipulating SQL queries and performing unauthorized operations.
 ## Impact
 + Attackers can exploit this SQL injection vulnerability to achieve unauthorized database access, sensitive data leakage, data tampering, comprehensive system control, and even service interruption, posing a serious threat to system security and business continuity.
 # DESCRIPTION
-+ During the security review of "Internal Marks Calculation In PHP With Source Code", N3xu5Cr4ck37g  discovered a critical SQL injection vulnerability in the "index.php" file. This vulnerability stems from insufficient user input validation of the 'user' parameter, allowing attackers to inject malicious SQL queries. Therefore, attackers can gain unauthorized access to databases, modify or delete data, and access sensitive information. Immediate remedial measures are needed to ensure system security and protect data integrity.
++ During the security review of "Internal Marks Calculation In PHP With Source Code", N3xu5Cr4ck37g  discovered a critical SQL injection vulnerability in the "index.php" file. This vulnerability stems from insufficient user input validation of the 'tid' parameter, allowing attackers to inject malicious SQL queries. Therefore, attackers can gain unauthorized access to databases, modify or delete data, and access sensitive information. Immediate remedial measures are needed to ensure system security and protect data integrity.
 # No login or authorization is required to exploit this vulnerability
 # Vulnerability details and POC
 ## Vulnerability type: 
@@ -28,7 +28,7 @@
 + error-based
 + time-based blind
 ## Vulnerability location:
-+ 'utid' parameter 
++ 'tid' parameter 
 ## Payload: 
 ```sql
     tid=111' AND 9791=(SELECT (CASE WHEN (9791=9791) THEN 9791 ELSE (SELECT 2296 UNION SELECT 6468) END))-- -&tpassword=111&tsub=111&Login=提交
