--- a/20_09_2024_b.md
+++ b/20_09_2024_b.md
@@ -22,7 +22,7 @@
 ## Impact
 + Attackers can exploit this vulnerability for unrestricted uploads, which may lead to file overwrite, file injection, directory traversal attacks, and denial of service attacks. Remote attacks may also result in RCE
 # DESCRIPTION
-+ laster discovered that the file upload operation was triggered on line 80 of the 'insert-product.php' file and the uploaded file was received using the '$_FILES' variable. Due to the lack of appropriate input validation and cleaning, remote attackers can pass malicious payloads through this file upload feature, resulting in unrestricted file uploads, which may further lead to remote code execution (RCE).
++ N3xu5Cr4ck37 discovered that the file upload operation was triggered on line 80 of the 'insert-product.php' file and the uploaded file was received using the '$_FILES' variable. Due to the lack of appropriate input validation and cleaning, remote attackers can pass malicious payloads through this file upload feature, resulting in unrestricted file uploads, which may further lead to remote code execution (RCE).
 # Vulnerability details and POC
 ## Payload
 ## 
